insta/tests/snapshots/test_redaction__foo_bar_range_to.snap
---
source: insta/tests/test_redaction.rs
expression: "Selector::parse(\".foo.bar[:10]\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
            Range(
                None,
                Some(
                    10,
                ),
            ),
        ],
    ],
}
