insta/tests/snapshots/test_redaction__metadata_raw_info_no_redaction.snap
---
source: insta/tests/test_redaction.rs
expression: "&vec![1, 2, 3]"
info:
  secret: sensitive_value
  public: visible
---
- 1
- 2
- 3
