insta/tests/snapshots/test_redaction__metadata_redaction_test.snap
---
source: insta/tests/test_redaction.rs
expression: "&vec![1, 2, 3]"
info:
  secret: "[REDACTED]"
  public: visible
---
- 1
- 2
- 3
