insta/tests/snapshots/test_redaction__named_redacted_supported.snap
---
source: insta/tests/test_redaction.rs
expression: "&obj"
---
id: "[id]"
items:
  - one
  - two
  - three
metadata:
  count: 42
  version: 123
